--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
     /* Full page background image */
     .container {
       background-image: url('Background.svg');  
-      background-size: cover;  
+      background-size: cover; /* Ensures the background covers the entire container */
       background-position: center;  
       background-repeat: no-repeat; 
-      height: 100vh; 
+      width: 100%; /* Ensure full width */
+      height: 100vh; /* Full height */
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -40,23 +41,22 @@
 
     /* Heading Section */
     h1 {
-      font-size: 25px;
-       
+      font-size: 2rem; /* Adjusted font size */
       font-family: 'DM Sans', sans-serif;
-      line-height: 1rem;
+      line-height: 1.2rem;
       letter-spacing: 0.1px;
       color: white;
-      margin-bottom: 1px;
+      margin-bottom: 0.5rem;
       text-align: center;
       font-weight: 200;
     }
 
     /* Subheading Section */
     p {
-        font-family: 'DM Sans', sans-serif;
-      font-size: 16px;
+      font-family: 'DM Sans', sans-serif;
+      font-size: 1rem; /* Adjusted font size */
       font-weight: 150;
-      width: 45%;
+      width: 80%; /* Adjusted for smaller screens */
       line-height: 1.5rem;
       color: white;
       margin-top: 0.5rem;
@@ -70,8 +70,8 @@
       background-color: white;
       padding: 14px;
       border-radius: 5px;
-      max-width: 70%;
-      width: 95%; /* Adjusted to be responsive */
+      max-width: 90%; /* Adjusted for responsiveness */
+      width: 100%;
       box-shadow: 0px 4px 4px 0px #00000040; /* Added shadow */
       border: 1px solid #000000; /* Added border */
       box-sizing: border-box; /* Ensure border doesn't affect element size */
@@ -83,33 +83,33 @@
       display: flex;
       justify-content: space-between;
       flex-wrap: wrap;
-      gap: 0.2rem;
+      gap: 1rem; /* Increased gap for better spacing */
     }
 
     /* Member cards */
     .member {
       background-color: rgb(255, 255, 255);
-      padding: 20px;
+      padding: 15px;
       border-radius: 10px;
       text-align: center;
-      width: calc(33.333% - 14px); /* Adjusted for spacing */
+      width: calc(33.333% - 1rem); /* Adjusted for spacing */
       box-sizing: border-box;
     }
 
     /* Profile Images */
     .member img {
-      width: 100px;
-      height: 120px;
+      width: 80px; /* Adjusted width */
+      height: 80px; /* Adjusted height */
       border-radius: 50%;
-      margin-bottom: 27px;
+      margin-bottom: 15px;
     }
 
     /* Member names */
     .member h3 {
-      margin: 7px 0;
+      margin: 5px 0;
       color: #333;
       font-weight: 300;
-      font-size: 20px;
+      font-size: 1.2rem; /* Adjusted font size */
       font-family: 'DM Sans', sans-serif;
     }
 
@@ -119,7 +119,7 @@
     }
 
     .icons a {
-      margin: 0 10px;
+      margin: 0 5px; /* Adjusted margin for smaller screens */
       text-decoration: none;
       font-size: 1rem; /* Adjust size as needed */
       color: #807a7a; /* Default color for icons */
@@ -132,7 +132,7 @@
 
     /* Button styling */
     .view-team-wrapper {
-      margin-top: 29px;
+      margin-top: 20px;
       text-align: center;
     }
 
@@ -141,8 +141,8 @@
       border: 1px solid #ffffff; /* White border */
       border-width: 0.1rem;
       color: #ffffff; /* White text color */
-      padding: 9px 15px;
-      font-size: 11px;
+      padding: 8px 12px; /* Adjusted padding */
+      font-size: 0.9rem; /* Adjusted font size */
       line-height: 1rem;
       text-align: center;
       text-decoration: none;
@@ -164,8 +164,46 @@
       }
 
       .member {
-        width: 50%; /* Adjusted for smaller screens */
+        width: 90%; /* Adjusted for smaller screens */
         margin-bottom: 20px;
+      }
+
+      h1 {
+        font-size: 1.5rem; /* Adjusted font size */
+      }
+
+      p {
+        width: 90%; /* Adjusted width for smaller screens */
+        font-size: 0.9rem; /* Adjusted font size */
+      }
+
+      .btn {
+        font-size: 0.8rem; /* Adjusted font size */
+        padding: 7px 10px; /* Adjusted padding */
+      }
+    }
+
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 1.2rem; /* Adjusted font size */
+      }
+
+      p {
+        font-size: 0.8rem; /* Adjusted font size */
+      }
+
+      .member img {
+        width: 60px; /* Adjusted width */
+        height: 60px; /* Adjusted height */
+      }
+
+      .member h3 {
+        font-size: 1rem; /* Adjusted font size */
+      }
+
+      .btn {
+        font-size: 0.7rem; /* Adjusted font size */
+        padding: 5px 8px; /* Adjusted padding */
       }
     }
   </style>
